--- a/PluginProject/plugin_package/src/main/AndroidManifest.xml
+++ b/PluginProject/plugin_package/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PluginActivity">
+        <activity android:name=".activity.PluginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".StaticReceiver">
+        <receiver android:name=".receiver.StaticReceiver">
 
             <intent-filter>
                 <action android:name="plugin.static.receiver" />
